--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=e-commerce-BE
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+# app
+spring.jpa.hibernate.ddl-auto=none
+server.servlet.context-path=/api
+spring.data.web.pageable.default-page-size=20
+spring.jpa.show-sql=true
+#Liquibase
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
