FEAT:setup spring security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+auth.secret=${AUTH_SECRET}
+auth.expiration_time=${AUTH_EXPIRATION_TIME}
